# rnnr

./: .coveragerc  .flake8  .gitignore  .travis.yml  README.rst  mypy.ini  pre-commit.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: run_tests.yml
docs/: api.rst  conf.py  index.rst  requirements.txt  tutorial.rst
rnnr/: __init__.py  attachments.py  callbacks.py  epoch_timer.py  event.py  handlers.py  progress_bar.py  runner.py  utils.py
tests/: conftest.py  test_checkpointer.py  test_checkpointing.py  test_default_timer.py  test_early_stopper.py  test_early_stopping.py  test_epoch_timer.py  test_eppoch_timer.py  test_iteration_based_runner.py  test_lambda_reducer.py  test_logging_epoch_timer.py  test_mean_aggregator.py  test_mean_reducer.py  test_pbar.py  test_python.py  test_reducer.py  test_runner.py  test_sum_reducer.py  test_timer.py  test_tqdm_progress_bar.py
