[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "rnnr"
author = "Kemal Kurniawan"
author-email = "kemal@kkurniawan.com"
home-page = "https://github.com/kmkurn/rnnr"
requires = ["tqdm"]
requires-python = ">=3.6,<4"
description-file = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.flit.metadata.requires-extra]
test = ["pytest ~=4.3.0", "pytest-cov"]
doc = ["Sphinx ~=1.8.5", "sphinx_rtd_theme", "sphinx-autodoc-typehints ~=1.6.0"]
dev = ["flake8", "flake8-mypy", "yapf"]

[tool.flit.metadata.urls]
Documentation = "https://rnnr.readthedocs.io"
